# dev-cpp-playbook

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
source/: CMakeLists.txt
source/bases/: functions.cpp  functions.h  looping.cpp  looping.h
